navigation overflow: fix z-index issue, re #7326

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -370,6 +370,7 @@
 
 #flex-header {
     position: relative;
+    z-index: 3;
 }
 
 /* --- public course marker ------------------------------------------------ */
